--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <li class="nav-item"><a href="#our-team">Команда</a></li>
                     <li class="nav-item"><a href="#too-work">Как мы работаем</a></li>
                     <li class="nav-item"><a href="#stay-request">Оставить заявку</a></li>
-                    <li class="nav-item"><a href="tel:+7(981)857-46-24">+7 (981) 857-46-24</a></li>
+                    <li class="nav-item"><a href="tel:+79818574624">+7 (981) 857-46-24</a></li>
                 </ul>
             </nav> <!--/Меню навигации-->
             <div class="main-header-inner"> <!--Заголовок, текст, кнопка-->
@@ -251,7 +251,7 @@
     <footer class="footer-block">
         <div class="container">
         <div class="footer-inner">
-            <a href="tel:+7 (981) 857-46-24" class="tel-item">+7(981)857-46-24</a>
+            <a href="tel:+7 (981) 857-46-24" class="tel-item">+79818574624</a>
             <address class="addr-item">г. Санкт-петербург, ул. Большая Конюшенная, 19</address>
             <p class="author-item">ИП Королёва А.А.</p>
         </div>
